# arolloa

./: CMakeLists.txt  build.sh  fix.sh  install-dependencies.sh
include/: arolloa.h
resources/: arolloa.desktop  launch-arolloa.sh.in
src/apps/: flatpak_manager.cpp
src/core/: compositor.cpp  compositor_animation.cpp  compositor_desktop.cpp  compositor_input.cpp  compositor_main.cpp  compositor_output.cpp  compositor_server.cpp  compositor_server_init.cpp  compositor_server_runtime.cpp  compositor_server_xdg.cpp  config.cpp  font_manager.cpp
src/oobe/: oobe.cpp  oobe_main.cpp
src/settings/: settings.cpp  settings_cli.cpp  settings_gui.cpp  settings_main.cpp  settings_simple.cpp  system_configurator.cpp
